--- a/myspace_css.css
+++ b/myspace_css.css
@@ -29,3 +29,16 @@
     right: 150px;
     color: rgb(255, 0, 144); 
 }
+
+table, thead {
+    border: 1px solid hotpink;
+    border-radius: 10px;
+    background-color: pink;
+    color:  rgb(255, 0, 144);
+    width: 300px;
+  }
+  
+  th, td{
+    border: 1px solid hotpink;
+    border-radius: 5px;
+  }
